# rust-snake

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
assets/: scores.json
src/: block.rs  dateformat.rs  direction.rs  draw.rs  food.rs  game.rs  main.rs  score.rs  snake.rs
