[package]
name = "rust-snake"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
piston_window = "0.128.0"
find_folder = "0.3.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
chrono = "0.4.26"